Add open graph metadata

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <meta name="og:title" value="Broccolini" />
+    <meta name="og:description" value="A non-destructive INI parser for .NET" />
     <title>Broccolini</title>
 </head>
 <body>
