--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>
             <h2 class="_section"><span class="_bracket">[</span>metadata<span class="_bracket">]</span></h1>
 
-            <span class="_key">source</span>  = <span class="_value"><a href="https://github.com/bash/broccolini">github.com/bash/broccolini</a></span><br />
+            <span class="_key">source code</span>  = <span class="_value"><a href="https://github.com/bash/broccolini">github.com/bash/broccolini</a></span><br />
             <span class="_key">download</span> = <span class="_value"><a href="https://www.nuget.org/packages/Broccolini">NuGet.org</a></span><br />
             <span class="_key">license</span> = <span class="_value">MIT</span><br />
             <span class="_key">target frameworks</span> = >= .NET Standard 2.0</span>
