--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <meta name="title" content="Broccolini">
+    <meta name="description" content="A non-destructive INI parser for .NET">
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Broccolini" />
     <meta property="og:description" content="A non-destructive INI parser for .NET" />
