--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
             <br />
         </p>
         <p>
-            <h2 class="_section"><span class="_bracket">[</span>features<span class="_bracket">]</span></h1>
-            <span class="_key">compatibility</span> = with GetPrivateProfileString</span><br />
-            <span class="_key">roundtrips</span> = preserve everything</span><br />
-            <span class="_key">simple editing</span> = yes</span><br />
-            <span class="_key">full AST exposed</span> = yes</span><br />
-            <span class="_key">test suite</span> = extensive</span><br />
+            <h2 class="_section"><span class="_bracket">[</span>features<span class="_bracket">]</span></h2>
+            <span class="_key">compatibility</span> = <span class="_value">with GetPrivateProfileString</span><br />
+            <span class="_key">roundtrips</span> = <span class="_value">preserve everything</span><br />
+            <span class="_key">simple editing</span> = <span class="_value">yes</span><br />
+            <span class="_key">full AST exposed</span> = <span class="_value">yes</span><br />
+            <span class="_key">test suite</span> = <span class="_value">extensive</span><br />
         </p>
         <p>
-            <h2 class="_section"><span class="_bracket">[</span>metadata<span class="_bracket">]</span></h1>
+            <h2 class="_section"><span class="_bracket">[</span>metadata<span class="_bracket">]</span></h2>
 
             <span class="_key">source code</span>  = <span class="_value"><a href="https://github.com/bash/broccolini">github.com/bash/broccolini</a></span><br />
             <span class="_key">download</span> = <span class="_value"><a href="https://www.nuget.org/packages/Broccolini">NuGet.org</a></span><br />
             <span class="_key">license</span> = <span class="_value">MIT</span><br />
-            <span class="_key">target frameworks</span> = >= .NET Standard 2.0</span>
+            <span class="_key">min target framework</span> = <span class="_value">.NET Standard 2.0</span>
         </p>
 
         <footer>
-            <span class="_comment">; This website uses colors from the the amazing <a href="https://github.com/catppuccin/catppuccin">Catppuccin Theme</a>.</span>
+            <span class="_comment">; a website by <a href="https://tau.garden">Tau</a></span>
         </footer>
     </main>
 </body>
